# Retail_API

./: Dockerfile  github.txt  pyproject.toml  render.txt  requirements.txt
app/: main.py
