[tool.poetry]
name = "retail-api"
version = "0.1.0"
description = ""
authors = ["Pine Nallamuthu <paiynthalir.samyappannallamuthu@student.uts.edu.au>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "1.5.3"
scikit-learn = "1.5.1"
fastapi = "0.111.0"
uvicorn = "0.30.1"
joblib = "1.4.2"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
