[tool.poetry]
name = "retail-api"
version = "0.1.0"
description = ""
authors = ["paiynthalir_SN"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
pandas = "1.5.3"
numpy = "1.23.2"
scikit-learn = "1.5.1"
joblib = "1.4.2"
fastapi = "0.111.0"
uvicorn = "0.30.1"
xgboost = "^2.1.1"
prophet = "^1.1.5"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
